# ChangeLog for net-p2p/mimicmod-lan
# Copyright 1999-2020 Gentoo Authors; Distributed under the GPL v2
# $Header: $

  16 Feb 2020;  <klondike@gentoo.org> metadata.xml, mimicmod-lan-9999.ebuild:
  Fix some QA issues

  16 Jul 2015; Francisco Blas Izquierdo Riera (klondike)
  mimicmod-lan-9999.ebuild:
  Add sqlite dep

  23 Oct 2014; Francisco Blas Izquierdo Riera (klondike)
  mimicmod-lan-9999.ebuild:
  Update EAPI and fix URL

  23 Jul 2014; Francisco Blas Izquierdo Riera (klondike) Manifest:
  Fix init.d

*mimicmod-lan-9999 (04 Apr 2014)

  04 Apr 2014; Francisco Blas Izquierdo Riera (klondike)
  +mimicmod-lan-9999.ebuild, +files/mimicmod-lan.confd,
  +files/mimicmod-lan.initd, +files/mimicmod-lan.logrotate, +metadata.xml:
  Add mimicmod-lan