@@ -4,22 +4,22 @@ Hash: SHA256
 AUX mimicmod-lan.confd 698 BLAKE2B eb44a8273d5e7e03d71d40674482face0b9346642e4ba03a9e2b05aea6b85c9eb875176cabc466583c04fbe0a1801944646c163b1d0df6fa015263a7b787b5ae SHA512 5dc8d2a6aca44d7f49f90cff3715fc7c71d69df9097a3ebf9d147e2f6a97fd194b93ecbfaa0518ac0b152d154b01d08e1e024bf69d0c7d2d66b1a89e96ee056f
 AUX mimicmod-lan.initd 798 BLAKE2B d059bf081fe66b38a98cea1028a23ce1889cd5fa1f23832e8040f4c5576d663b39995fe2e8abd4e64951b9d191e647f78b22d4cf331b3f5dfb767d5e094e2a1e SHA512 c703417cba3f1ebaeaef80dc1186d76e20e7a6c0e97548d15a7b3e8375cb4e81cdc33b6546ce557754ec9735b96ab644a6ac2629f7259ae53ad5c6a07ac2a743
 AUX mimicmod-lan.logrotate 111 BLAKE2B ff2feb6caab699c0f1584214d342cca09ca7f887340a702d7f1340ee5fb3e53341b746757806e5c2df085ef065ec2ba2e59c791edaf2857ec926735dfe00abe8 SHA512 cfea1921518b71676b66ca0339bffb8ceaf7da680361a9489ee7cf25330eac0186a266a84734e79a33a05d587fa432e2fe573b12f59a68306830c28c35b83385
-EBUILD mimicmod-lan-9999.ebuild 1309 BLAKE2B 42816b8d54b6fc9bec89db09a8d08c0018ebac54e25a326e289d67c348eac5931d30a8aeeb682ee494e01e536588756ae9fd3c84d9afa7127604b0d1e89effcb SHA512 b0c2b84e2bfc77379cde69aea1bd398339ca09c9db3c4c5c6bcf1c4c8dd18e76f59beba99abb8d78466f1140a151e376d5c5b9056f1692b0c0a95dc534669ca5
-MISC ChangeLog 755 BLAKE2B 77eeae44accbb7cd5e023024826e20643fe06caaa8546c69a38804d4b30774e1f013919a7fb0cdb3638bbaa4c7fa013c0dbb114fcd492244317f996c9bf404a9 SHA512 a4bef2984385422802e95f7786703f317433f76652e36a5e95284913d60a9eb118c492658d3bdf163d82a471ab1cae3706504df9afd4c3705b2185a7a81918cd
+EBUILD mimicmod-lan-9999.ebuild 1311 BLAKE2B 579ab443212ff9010e9fb31c7f3ca492bca37b259f49f9a9a3cfbc014c3a038237ed638158dbefe8eac7ab5fec5c20b8e94a43ca8aa79444cfe30041fd234d36 SHA512 9dea6d3baf05cd21e7371725373098a5f44b875accd68bfd44ffe8d0d5de2fbdb8ba451c18ebab800e3005d829110b74e229bec0285a588ac61a7dc123112191
+MISC ChangeLog 877 BLAKE2B c9cc10cedfff536b9e382a160b79f91eec52399e5b81b490eb5fcf2888bfa87c536cdbf5f3f5fcdd0d529e28425830314ca62983b726830239f3a52eef016a3d SHA512 d58d9aa86285368526dbc4baa108a68a42451ebeb44f4722fe1711c809b2c541c64b8cb8437640c8cde1c5987956c0663be58675e862e5c04e5e833591058066
 MISC metadata.xml 265 BLAKE2B d9bbea00b545fc97ca22e1eb002ab2f58073d04e3e5b25d41a4c40299bb709d2cfe158ba8a14dfc42a49259ab3b75bdaa860b211679bcb734d3092d275df2b7e SHA512 e4354cbcce0d008a671a1b0d03acd715a3df9e786459b546afac38558a4dc38475ad94190a6bf0f514a0696fa4b15413f326c9d57ba8ffff1d0d6988a61ad321
 -----BEGIN PGP SIGNATURE-----
 
-iQIzBAEBCAAdFiEEDaSLWSPwfVgqfnPQ9L3S7+j/ePkFAl5Js7wACgkQ9L3S7+j/
-ePloMw/+IOgiy1Su05eglhW7qcHXSzoj7db5mJS6AstXoz+SEhtvNYS4zVeHT9Xw
-WmgDNh47k0hyVJJ9OrMtFs5umeVmuBTeHwEsfy0Oll8StGZegOFhFZfwdQ0pVCTj
-sfWHZhzKg3GVnUX+3jd8hYUWpTNpgGftyMQev0numiZ5cJqbXz/84c02Oj31SYOx
-xmtvDlskzzDtxrH1ulu3GKplqS1J8jTOTv5VW6sIYdCLRLWFaT4IJCgt87U7UZAN
-gYpNlIkTa4abFyN0ZnJHPXS+D16wmeKl/Ngf/0/uAfFU810Yf+xmEko6dKDCqvVB
-oo7bMByUIKBOGs+cToVhAqC2AcqvuDN51eeJhksZSE0rM79BSdAwcmPyaKbBhXZI
-mPH5glZR752+opVCfaz6u8BlNwijy17v7IJ12ajVDrTdyuUtIBVl66jCCkTPdof9
-tMHkKmEKwQJTwSaoYZSltIx5e9HLmGVvk5jvuvrA6H57+6jqTFF4BNsgZsduShzc
-TBkFsWrsDumRMKOh7COU/y0WnGg7IUKIuLSWQRcU3npXEL96K6R+rWLnUrZWmmxr
-54VIPSMGruy/LsZw44t0TXY/0HMwJjMl26ZxiVZclW4RR1Am2GCdiFh6v1jYcFWd
-jjw6CjVmzxafFc37dUPC97PQanAm4+iSGCYCIv/qUGEEGHEkjZk=
-=NUVM
+iQIzBAEBCAAdFiEEDaSLWSPwfVgqfnPQ9L3S7+j/ePkFAl8BLEUACgkQ9L3S7+j/
+ePm5KA//QAmMrAgv0Yn47Fyu7kL0ZNVi4EBP2rciGLgsN08tmuyzIccAdhm8tHr2
+pbvcWYuNzqH0XEVs9w2taQdqXTtnGUCQooTsS/yG/hOpH02MVZtRyXoY5Q77otU0
+kk8SLMVVMF+AJdVZEbwm8IMaITI+87Z3CNYed9uzN2I3yviNHuurCzSlw+glc1KP
+anqMQoQqlyYQtK7RaLefbVFY4fk9Q7k7/k+WeSYrbbYuR1KIaNtXvfj+IlZjJRUp
+CIy82rACUYDDoAjnEegcsLnuICQaDYesn1NevHZNQSIdy8MZNyjcehFRE7B0eDUY
+XS324RNGuDr7viXLznUIWfrw49A1kToDPta2yovAD2YdBeHu8fVN0Af1kuPL42CJ
+9XJjc5tPy7sNojIKfzJ/SDOxX9l62cdD8yunaH42mo79J3f+MKezceyAdiS18C6p
+PsDJhuhjKGid117DJNm9c3UDCqzZt9UYkeQ3VdWxRz07dColgDrI1peUQWy3a3u6
+Wo0o/1lVP/AMwC8OysENJSG/humgOQUAovIR2XhwLPbxa7w7RLqCDZ1G2/xkktC4
+A+N7JzFHSVlqcB1iqMcLdr2l1EN0of6suQoG2mvDIaq2tIyh8zR+0qBhM8Y9jsEB
+PY9k4gdt6KBTbU+HprQoxnorpAmf8uZN1rSSjUZDkJflYxnpM58=
+=eSOX
 -----END PGP SIGNATURE-----
