@@ -4,22 +4,22 @@ Hash: SHA256
 AUX mimicmod.confd 698 BLAKE2B eb44a8273d5e7e03d71d40674482face0b9346642e4ba03a9e2b05aea6b85c9eb875176cabc466583c04fbe0a1801944646c163b1d0df6fa015263a7b787b5ae SHA512 5dc8d2a6aca44d7f49f90cff3715fc7c71d69df9097a3ebf9d147e2f6a97fd194b93ecbfaa0518ac0b152d154b01d08e1e024bf69d0c7d2d66b1a89e96ee056f
 AUX mimicmod.initd 798 BLAKE2B d059bf081fe66b38a98cea1028a23ce1889cd5fa1f23832e8040f4c5576d663b39995fe2e8abd4e64951b9d191e647f78b22d4cf331b3f5dfb767d5e094e2a1e SHA512 c703417cba3f1ebaeaef80dc1186d76e20e7a6c0e97548d15a7b3e8375cb4e81cdc33b6546ce557754ec9735b96ab644a6ac2629f7259ae53ad5c6a07ac2a743
 AUX mimicmod.logrotate 111 BLAKE2B ff2feb6caab699c0f1584214d342cca09ca7f887340a702d7f1340ee5fb3e53341b746757806e5c2df085ef065ec2ba2e59c791edaf2857ec926735dfe00abe8 SHA512 cfea1921518b71676b66ca0339bffb8ceaf7da680361a9489ee7cf25330eac0186a266a84734e79a33a05d587fa432e2fe573b12f59a68306830c28c35b83385
-EBUILD mimicmod-9999.ebuild 1233 BLAKE2B 3fdf907526041bf8438051b009192830ad0a4e38c50a3eb7e0f99bdec4daa2fdbda8d78840552cd397753d4b97bf94ce5df3ef7a837ed4007921df16f5a6a8db SHA512 edf8839838736f46e78174db595e14e1e283ec3f7c57a3cc63f07f30f1b3bb80a2d6f76fc291c9316fd6e40e12de1578015985c11e6502c684b63273070d2475
-MISC ChangeLog 748 BLAKE2B 004cbfee65a5866bcf1bd834f0dea996cdb05c90a61f2bcb23e748ad23387b62923949b6dbcf5833cbb53003082c2f16fe20852da3d7528ed41ef5d7cebc4f36 SHA512 cbae5e84b8f7a97c8be3be5d17a1cf721e7b4f9387e21a6357161f9bfaf714efbf7ef5bd78f741f1336d84799bf14338ea99b1eab0992cace9ad3be6295525d1
+EBUILD mimicmod-9999.ebuild 1235 BLAKE2B b08b51f6c70bb4c328a2a630739ebaab8359263ac650d623c4c5ded4fdcc337ad5ff9f92e0a031b23171969a0f0a3a904808aaad00fc6ae6cbb8da557878d66d SHA512 52303bd3cc74c5d15e726fdef452d851c6821766174603910ff1a9e9eee9e042f5050df8fdb266caf92e2a10b0bd44ab6cb98727d4188c27610c24d12a1594f2
+MISC ChangeLog 866 BLAKE2B 10fab40599e2317421c8e0d4e6563326f623317e8b8fc4fc1eefe810830f91025d72d2ec816547e8746d90501973bc3209302632be7e55139578203a962856bb SHA512 94b161628f334d9a26d87775dac722f23b67b65548f6977d1f240cfabd3eccc2f70c25218efb4bf1b7abc26b88023df2c2e14632877ef577c32054282baa79fa
 MISC metadata.xml 265 BLAKE2B d9bbea00b545fc97ca22e1eb002ab2f58073d04e3e5b25d41a4c40299bb709d2cfe158ba8a14dfc42a49259ab3b75bdaa860b211679bcb734d3092d275df2b7e SHA512 e4354cbcce0d008a671a1b0d03acd715a3df9e786459b546afac38558a4dc38475ad94190a6bf0f514a0696fa4b15413f326c9d57ba8ffff1d0d6988a61ad321
 -----BEGIN PGP SIGNATURE-----
 
-iQIzBAEBCAAdFiEEDaSLWSPwfVgqfnPQ9L3S7+j/ePkFAl5Js7wACgkQ9L3S7+j/
-ePkAdBAAl5wAmBNb//XEV/C8NotZ6m3qQVBTtreGvn9QylP1vUvGJP0tvzEuPGyg
-iJmGCxgyAEFgvZjo4Q1K7Q/PmusdjIc6/hWIe8u2IrBMrl4FC0p+52KxKeGclx7d
-N8JyVHa7mWNtrlj7qbrmkTR/c/0p3uvakveDktbTY8op/Jdtc6+WEoMTvgnnzioG
-LoI7yMvYJJ4ed26T1yp5rC7zL963VgkY7keE2fnHAxug2QErkM303umrhD7JQYim
-WY88zzfVKMGAY2EF/FRgdwfG2mr47XFkuQ/VwtpLghO98maep+IY2mDEuHQseHRj
-zI2UQoele+x6+BhE4V0eyRf0BcT54QGbskYwoRgEBsg4CIfyNY9R99JFY/6cWub9
-tGgmjIkhUiVl1YBmZvaTPZ0nbi9pWHq40udphiP5w/QFJa8nIsMFlUGSolDb5cCU
-sZep/WtyNKS0m3PywoarJgg5Js488VCY1Pn968zNMVmnUZMVmyzp6AS+JgwElRjH
-fakaxzRuenH3it/6X7XSyJd46+TsLDWYUdHxJ+YthSy7ZuzDmIV063IrHTPepDI8
-d3ubnPNF56j8d7Ze2ch6QHbjQd6F3aKhHrx2g8nm1llW4XnhGPONuUfbg279AGiy
-AGkTn6iVq/X18hZBKNiwaolbD9nsimj8esdAoLhHP8X+pmBY7Dw=
-=45j6
+iQIzBAEBCAAdFiEEDaSLWSPwfVgqfnPQ9L3S7+j/ePkFAl8BLEUACgkQ9L3S7+j/
+ePnFXA//dn5jzt2X2viVUIVfDMpw6+Frlpz4/c4W1PHB9S4fW+esYw7EeUVqY+Pd
+UyPrW0s8q7YDbZCqmUKaBibBEzTTjmvzMQcGDT0eq9nkH6v10SLAr901LHXJMYTf
+Aqn23LB9wBD9Pf5+hyhh8zCjWNA81ocOUexjGxsbzBEbaio518nkWGmKg9CXVZCe
+UtIXe1OTENBXk6rX3YMAgd+0NpGna9IRla4SYcsf/6GbYuC3w6+mmAazX2HIDTRt
+eLe6kHzbzSIcQlPcazIRBwfQg2s/6YwvahhaFk2cKLQqZozfn5vXW8V6hL+Ufpo9
+sPZNgLUEu+1akU9+gK7UbY7fdv9E3+ELpcYMFfvA8xRMdVPJtaPz9hq/TFshgLwX
+Hsc1RiR70c1z0nmCXBrEAJz1rpsQVWhmm3taZTHQOgS2I2p77kJYlHJCHUiscrdd
+wV22mUYF9ML304pHRRiGYdQFDRIz0+Pv09u6n4hZPG3jGuwn0WA+OkC9qvoUDPsi
+1lBm1zcbyfv/1AMNJvQEJRv1Uym61o6ZltegPyCouFFg1IeudZfmLoRC+JIE1Tw7
+WevLU5p0OESJRx3BpSZHO6DYPF36UyjaVf6br6tA2VM25HPMcnerzg6s+ioH2jTI
+u9P+BrDH0czOuAznyI9oMUYhSQrb0SO/1k1yjGap4FLN/EHmS2E=
+=UFyC
 -----END PGP SIGNATURE-----
