@@ -4,22 +4,22 @@ Hash: SHA256
 AUX uhub.confd 698 BLAKE2B eb44a8273d5e7e03d71d40674482face0b9346642e4ba03a9e2b05aea6b85c9eb875176cabc466583c04fbe0a1801944646c163b1d0df6fa015263a7b787b5ae SHA512 5dc8d2a6aca44d7f49f90cff3715fc7c71d69df9097a3ebf9d147e2f6a97fd194b93ecbfaa0518ac0b152d154b01d08e1e024bf69d0c7d2d66b1a89e96ee056f
 AUX uhub.initd 798 BLAKE2B d059bf081fe66b38a98cea1028a23ce1889cd5fa1f23832e8040f4c5576d663b39995fe2e8abd4e64951b9d191e647f78b22d4cf331b3f5dfb767d5e094e2a1e SHA512 c703417cba3f1ebaeaef80dc1186d76e20e7a6c0e97548d15a7b3e8375cb4e81cdc33b6546ce557754ec9735b96ab644a6ac2629f7259ae53ad5c6a07ac2a743
 AUX uhub.logrotate 111 BLAKE2B ff2feb6caab699c0f1584214d342cca09ca7f887340a702d7f1340ee5fb3e53341b746757806e5c2df085ef065ec2ba2e59c791edaf2857ec926735dfe00abe8 SHA512 cfea1921518b71676b66ca0339bffb8ceaf7da680361a9489ee7cf25330eac0186a266a84734e79a33a05d587fa432e2fe573b12f59a68306830c28c35b83385
-EBUILD uhub-9999.ebuild 1206 BLAKE2B a0c00d75642e03aa798d4fe6fe8fcfe1d4d72d3be25a62b197bc1156578919023c7056c5141f96f27d0025ab8c0007f982e736936229717bc2b61fb9ade76f11 SHA512 bb6051ab0873af5e0e91f3aa4835991ed1b108a3fd2181d899dd0ebf7f4c1777412e2e3afde8df58897ff966a5fad036e26d8c3e1190608187911da188f102a5
-MISC ChangeLog 299 BLAKE2B 8088714a46cb88e7201e4b1224a2563f4ae4ee26144bb05a36312408faba0ac2e339880442c412130b06ec0c398f20698c00207b7ff71cd833cc08681e150e69 SHA512 49f2f82875b4108add887630a6d1e9952a07e101eb376f2399dcb54506c4fba0a3977fb5904a9dc7fb655b86087adeee1eed9c9eb6474ddb4f958e86c4c0340e
+EBUILD uhub-9999.ebuild 1208 BLAKE2B 4cb03db199a102cfda017d30ec741d28e437365d9beec0f4c6e320f27a47e265384c27f908448ceea1af01e1a3c98b58a2a8f4100de44812f85faf2a99f0833e SHA512 8026e1cc8bd686e76937df2c3ea5df4c7458a557effe315e8bc21d984145b932c9e5fa9036c9a6f6f36d08a5ccde1c3427785c6a088a2e324cda2a856764133c
+MISC ChangeLog 413 BLAKE2B 8146be5f91740e4c77f94a6672783c868750bc3faadf3ca7861cc1015e6aaf942f33d9ebab578b6ea6982ca841c7b254b8de5832ee4753c2a63d174906e38552 SHA512 62d0a2a935705e2d67d91a0197f119b34506f216317016fe0e4c234cf06346c7245ae533915f2e309416af62405c7693a960c4df8fcc6f3508fe7879b242ecd3
 MISC metadata.xml 265 BLAKE2B d9bbea00b545fc97ca22e1eb002ab2f58073d04e3e5b25d41a4c40299bb709d2cfe158ba8a14dfc42a49259ab3b75bdaa860b211679bcb734d3092d275df2b7e SHA512 e4354cbcce0d008a671a1b0d03acd715a3df9e786459b546afac38558a4dc38475ad94190a6bf0f514a0696fa4b15413f326c9d57ba8ffff1d0d6988a61ad321
 -----BEGIN PGP SIGNATURE-----
 
-iQIyBAEBCAAdFiEEDaSLWSPwfVgqfnPQ9L3S7+j/ePkFAl5Js7wACgkQ9L3S7+j/
-ePlJIQ/46p3X+3ei7EBSqaq+wfuHuiDwjbi1NYL5j88y70kpN/oatwZTBphllVc5
-QGaHmiMzhDgr8/4Cmqlthzp6zj2HeNhx1PKdEbWNCtQz/Fz12kidXX3MD+iCqkdK
-agNB9H+3xFAoEQ/ztljfybdtQNFi9VK3rXLeyXN9Xeu/ufgrQBkQo0PxIrV653qC
-zMFxF1oSormI9W4k78K6pOujEQ4d4ZdkOIUVUIKuuffUZJW23OhpVVAVILdxws02
-7DTkXBgU0Sk1gbbRQxP6X1/hGkXRp2ncpWOl7ht8rhfQLoI2eAGJtIm5oVzrOqDR
-jErvcWkR9UPV+vB4DTiBBVUJ+KvpVNWJMq0nBES36DCQR+csig9KStgnniLJhYp6
-eLD2faDKhrxn93Di2MJumFQ1ZTocqZC3BsoA8zhivc4eMm//OLdN7PHbZOyPvstd
-ft1S6D5yVX18Bu10y7NOaujoh4reGjluK8tFR7KouK0S6pwznWB27Q7bSzURnbwH
-kLGaLhqB0YnTFvmhgYYxxhdYUiWKlFPXHa6LE3fc7R6sQ5Gi1gnS68cBh/qOhYJ8
-/bfHCUzFr+hwv+5C4TWxsKo2e41YGvQjFcbOcL3Omf508X7822OMuKN2Am6oZpQ/
-wnzUwyJXvGotf54ZReexxFUEFmcDgr4kzNBPwmrEZA/5OrJfag==
-=SNqI
+iQIzBAEBCAAdFiEEDaSLWSPwfVgqfnPQ9L3S7+j/ePkFAl8BLEUACgkQ9L3S7+j/
+ePnSshAAnMHmdkQ47yATpcaR2zfuBBBF6hh8i9BQxeWCv2Bi0cQynbxz9XNwW2yS
+sZa+c04BU5hqZjGjLcf6MBY8M705FVOHnqCBXHEHHOkHi2dCgRqKoy9NKjS65241
+ln1iurwr7/tzfm15ZhA4M3NWmAoQv5lIwaKApMvDx6NCfDm2cc4xiyqWTHo4zPkj
+oBrj7Utfz2bH182bePlx0FNvG6b6vAmlc2BsTJmokH9b1T+cR45OV1YY9p04oC50
+Sy1j8chgAsqbCGdR9J6/NI/5Z+g3AEqDWYRq5ko+NmOciNkKud23IW26ln4tLsak
+hJWqFI7SkT0ozRi3WgWtyXXSZlAp4IeV9+rdgOJi/ZJ7CHFEFFbSxUqtvbEI/cal
++laKoYxLXTxTI+3jwKtVRuBbTmWe0wDFRifhyhPJ389T+qG2gI6EdHruCTEnb3wO
+l7wt2gn/RsdUq/XpoBTOa5Qbf1yvdbURwoErFAepkTDBN+5K6meYhWAvHS+7b+IS
+Diz9zcYiqrOMCOOM/PuLt2AIcC3IeZJL+dr0gtEihqAtHVO2JYh+MJXG3lJK/XpA
+UYFEvURKB3cR+/7+0soDgY9/uGPI4ZNa1hzXn2+TTCmy0fNMixn1AeREY0MYV0pS
+kL27+ZR6DiaSBAbGQgCeNmTRgr60IS+OWM4FZLVPdFPqyUfxUA0=
+=eHLf
 -----END PGP SIGNATURE-----
