@@ -2,6 +2,9 @@
 # Copyright 1999-2020 Gentoo Authors; Distributed under the GPL v2
 # $Header: $
 
+  05 Jul 2020;  <klondike@gentoo.org> mimicmod-9999.ebuild:
+  net-p2p/*: Use https instead of unsecured git protocol
+
   16 Feb 2020;  <klondike@gentoo.org> metadata.xml, mimicmod-9999.ebuild:
   Fix some QA issues
 
