@@ -1,3 +1,6 @@
+  05 Jul 2020;  <klondike@gentoo.org> uhub-9999.ebuild:
+  net-p2p/*: Use https instead of unsecured git protocol
+
   16 Feb 2020;  <klondike@gentoo.org> metadata.xml, uhub-9999.ebuild:
   Fix some QA issues
 
